test/tests/bad/free-vars-in-data.carth
;; FreeVarsInData

(data (Foo a) (Foo a b))
